--- a/choir/requirements.txt
+++ b/choir/requirements.txt
@@ -4,7 +4,10 @@ async-timeout==4.0.2
 attrs==21.4.0
 autobahn==22.4.2
 Automat==20.2.0
+backports.zoneinfo==0.2.1
 cffi==1.14.1
+channels==3.0.4
+channels-redis==3.4.0
 constantly==15.1.0
 cryptography==37.0.2
 daphne==3.0.2
@@ -20,12 +23,71 @@ psycopg2==2.9.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
+PyMuPDF==1.18.8
 pyOpenSSL==22.0.0
 pytz==2022.1
 reportlab==3.6.1
 service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.2
+Twisted==22.4.0
+twisted-iocpsupport==1.0.2
+txaio==22.2.1
+typing-extensions==4.2.0
+tzdata==2022.1
+zope.interface==5.5.0.dev0
+
+(catalogue) C:\Users\HP\PycharmProjects\library\choir>pip uninstall channels
+Uninstalling channels-3.0.4:
+  Would remove:
+    c:\users\hp\pycharmprojects\jennifer\catalogue\lib\site-packages\channels-3.0.4.dist-info\*
+    c:\users\hp\pycharmprojects\jennifer\catalogue\lib\site-packages\channels\*
+Proceed (y/n)? y
+  Successfully uninstalled channels-3.0.4
+
+(catalogue) C:\Users\HP\PycharmProjects\library\choir>pip uninstall channels-redis
+Uninstalling channels-redis-3.4.0:
+  Would remove:
+    c:\users\hp\pycharmprojects\jennifer\catalogue\lib\site-packages\channels_redis-3.4.0.dist-info\*
+    c:\users\hp\pycharmprojects\jennifer\catalogue\lib\site-packages\channels_redis\*
+Proceed (y/n)? y
+  Successfully uninstalled channels-redis-3.4.0
+
+(catalogue) C:\Users\HP\PycharmProjects\library\choir>pip freeze
+3-1==1.0.0
+aioredis==1.3.1
+asgiref==3.5.1
+async-timeout==4.0.2
+attrs==21.4.0
+autobahn==22.4.2
+Automat==20.2.0
+backports.zoneinfo==0.2.1
+cffi==1.14.1
+constantly==15.1.0
+cryptography==37.0.2
+daphne==3.0.2
+Django==4.0.4
+django-crispy-forms==1.14.0
+gunicorn==20.1.0
+hiredis==2.0.0
+hyperlink==21.0.0
+idna==3.3
+incremental==21.3.0
+msgpack==1.0.3
+Pillow==8.0.1
+psycopg2==2.9.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+PyMuPDF==1.18.8
+pyOpenSSL==22.0.0
+pytz==2022.1
+reportlab==3.6.1
+service-identity==21.1.0
+six==1.16.0
+sqlparse==0.4.2
+Twisted==22.4.0
+twisted-iocpsupport==1.0.2
 txaio==22.2.1
 typing-extensions==4.2.0
 tzdata==2022.1
