--- a/choir/requirements.txt
+++ b/choir/requirements.txt
@@ -12,6 +12,7 @@ cryptography==37.0.2
 daphne==3.0.2
 Django==4.0.4
 django-crispy-forms==1.14.0
+dj-database-url
 gunicorn
 hiredis==2.0.0
 hyperlink==21.0.0
