--- a/choir/requirements.txt
+++ b/choir/requirements.txt
@@ -12,8 +12,8 @@ cryptography==37.0.2
 daphne==3.0.2
 Django==4.0.4
 django-crispy-forms==1.14.0
-dj-database-url
-gunicorn
+dj-database-url==0.5.0
+gunicorn==20.1.0
 hiredis==2.0.0
 hyperlink==21.0.0
 idna==3.3
@@ -24,7 +24,7 @@ psycopg2==2.9.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
-pymupdf
+pymupdf==1.18.8
 pyOpenSSL==22.0.0
 pytz==2022.1
 reportlab==3.6.1
